write control file

--- a/control
+++ b/control
@@ -5,5 +5,5 @@ Version: 0.0.1
 Architecture: iphoneos-arm
 Description: An awesome MobileSubstrate tweak!
 Maintainer: Trust Circle
-Author: Trust Circle
+Author: starfall
 Section: Tweaks
