fix package name in control

--- a/control
+++ b/control
@@ -1,4 +1,4 @@
-Package: com.trustcircle.gamehub_tweak
+Package: com.trustcircle.gamehub-tweak
 Name: gamehub_tweak
 Depends: mobilesubstrate
 Version: 0.0.1
